--- a/index.html
+++ b/index.html
@@ -1,58 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      rel="icon"
-      href="resources/favicon.ico"
-      type="image/x-icon"
-      sizes="96x96"
-    />
-
-    <title>Flip the coin | devChallenges.io</title>
-
-    <!--You are welcome to delete these styles or modify them in your own stylesheet -->
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        height: 100vh;
-      }
-
-      .author-info {
-        font-size: 14px;
-        text-align: center;
-        margin-top: 16px;
-        color: rgb(55, 65, 81);
-      }
-
-      .author-info a {
-        text-decoration: none;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- 
-
-    Flip a Coin Game
-    Press the coin or the button to flip the coin
-    Head
-    Tail
-    Random
-  
-    -->
-
-    <div class="author-info">
-      Coded by <a href="#">Your Name Here</a> | Challenge by
-      <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
-        >devChallenges.io</a
-      >.
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/styles.css">
+    <title>Flip</title>
+</head>
+<body>
+    <header>
+        <h1>Flip the coin</h1>
+        <h2>Press the coin or the button to flip the coin</h2>
+    </header>
+    <section>
+        <figure>
+            <img src="src/resources/heads.svg" alt="" id="imagen">
+        </figure>
+        <figure>
+            <img src="resources/shadow.svg" alt="">
+        </figure>
+    </section>
+    <section>
+        <p id="text_result">Heads</p>
+        <button id="btn_random" onclick="cambiarImagen()">Flip Coin</button>
+    </section>
+    <script src="src/app.js"></script>
+</body>
 </html>
