--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="src/resources/heads.svg" alt="" id="imagen">
         </figure>
         <figure>
-            <img src="resources/shadow.svg" alt="">
+            <img src="src/resources/shadow.svg" alt="">
         </figure>
     </section>
     <section>
